<resources>
    <string name="app_name">SoRandom</string>

    <string name="hello_world">World of Hello!</string>
    <string name="login_btn">Login</string>
    <string name="reg_btn">Register</string>
    <string name="reg_username">Userame</string>
    <string name="reg_email">E-mail</string>
    <string name="reg_pw">Password</string>
    <string name="reg_cnf_pw">Confirm Password</string>
    <string name="user_hint">Enter your Username</string>
    <string name="email_hint">someone@example.com</string>
    <string name="pw_hint">Enter your password</string>
    <string name="cnf_pw_hint">Re-enter your password</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home_screen">Home Screen</string>
    <string name="internet_error">No Internet Connection</string>
    <string name="search_tab">#Search</string>
    <string name="stories_tab">Stories</string>
    <string name="search_hint">#Query</string>
    <string name="search_btn">Search</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="title_activity_post_stories">Post Your Story</string>
    <string name="title_activity_read_stories">Read Stories</string>
    <string name="title_activity_story_panel">Story Panel</string>
    <string name="title_activity_view_story">View Story</string>
</resources>
